# gp-from-scratch

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: README.md  co2_mm_mlo.txt
experiments/: ard.py  co2.py  common.py  gibbs_kernel.py  heteroscedastic.py  multistart.py  ntk_experiments.py  prior_samples.py  sklearn_parity.py  spatial2d.py  validate.py
gp/: __init__.py  gp.py  kernels.py  nn.py  ntk.py  optimize.py
tests/: test_gp.py  test_kernels.py  test_ntk.py
theory/: derivations.md
