[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gp-from-scratch"
version = "0.1.0"
description = "Gaussian process regression in pure NumPy -- kernels, marginal-likelihood optimization, calibration -- plus the NTK/NNGP wide-network correspondence, verified empirically"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "matplotlib>=3.7", "scikit-learn>=1.3"]

[tool.setuptools.packages.find]
include = ["gp*"]

[tool.pytest.ini_options]
filterwarnings = ["error::RuntimeWarning"]
