[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gp-from-scratch"
version = "0.1.0"
description = "Gaussian process regression in pure NumPy -- kernels, marginal-likelihood optimization, calibration -- plus the NTK/NNGP wide-network correspondence, verified empirically"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "matplotlib>=3.7", "scikit-learn>=1.3", "mypy>=1.8"]

[tool.setuptools.packages.find]
include = ["gp*"]

[tool.pytest.ini_options]
# Run the unit tests AND the docstring examples. --doctest-modules is scoped
# to the (numpy-only) gp package and tests via testpaths, so the doctests never
# try to import experiments-only deps like matplotlib -- keeping CI green.
addopts = "--doctest-modules"
testpaths = ["gp", "tests"]
# numerical sloppiness (overflow, invalid ops) fails tests instead of hiding
filterwarnings = ["error::RuntimeWarning"]

[tool.mypy]
# Type-check the public package (numpy-only). The experiments and tests carry
# no annotation contract, so they are out of scope. numpy ships its own stubs;
# other third-party imports (sklearn in tests) are not checked here.
files = ["gp"]
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
